--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Bootstrap 101 Template</title>
+    <title>Сантехник г.Донецк</title>
 
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="услуги сантехника в Донецке">
+    <meta name="keywords" content="сантехник">
     <meta name="author" content="">
 
         <!-- Favicons
@@ -34,7 +34,9 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container text-center">
+
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
