--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <meta name="description" content="услуги сантехника в Донецке">
-    <meta name="keywords" content="сантехник">
+    <meta name="keywords" content="сантехник Донецк">
     <meta name="author" content="">
 
         <!-- Favicons
@@ -35,7 +35,7 @@
   </head>
   <body>
     <div class="container text-center">
-
+        <h1>Услуги сантехника в г.Донецк</h1>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
